Changelog for SimpleStats (v1.4.2-SNAPSHOT)

2012-07-29 17:39:27 +0100    make memory task async (James Richardson)
2012-07-29 17:38:08 +0100    set PK for TickRateRecord (James Richardson)
2012-07-29 17:36:14 +0100    stop bukkit database from initalising (James Richardson)
2012-07-29 17:34:19 +0100    implemented new storage system (James Richardson)
2012-07-29 17:27:26 +0100    added metrics - removed old database handler (James Richardson)

v1.4.1
2012-07-01 14:59:00 +0100    fix #1, monitoring tasks not being started (James Richardson)

v1.4.0
2012-06-16 01:11:56 +0100    updated changelog (James Richardson)
2012-06-15 22:04:41 +0100    added auto updater ability (James Richardson)

v1.3.1
2012-03-25 00:11:41 +0000    added site.xml (James Richardson)
2012-03-25 00:11:24 +0000    build against latest version of BukkitUtilities (James Richardson)
2012-02-27 21:39:11 +0000    fix typo in README (James Richardson)

v1.3.0
2012-02-27 21:34:56 +0000    add github downloads to build (James Richardson)
2012-02-27 21:33:03 +0000    preparing to release (James Richardson)
2012-02-27 21:31:15 +0000    code clean up (James Richardson)
2012-02-27 21:25:23 +0000    added README (James Richardson)
2012-02-27 21:14:49 +0000    upcase POM (James Richardson)
2012-02-27 21:14:21 +0000    preparing to release (James Richardson)
2012-02-27 20:10:02 +0000    added tracking ticks per second performance (James Richardson)
2012-02-27 19:26:59 +0000    finished conversion to BukkitUtils (James Richardson)
2012-02-27 19:01:32 +0000    renamed packages (James Richardson)
2012-02-27 18:58:21 +0000    rename package (James Richardson)
2012-02-27 18:57:54 +0000    converted to use SimplePlugin class (James Richardson)
2012-02-27 18:46:14 +0000    updated to use maven (James Richardson)
2011-11-03 22:43:32 +0000    - clean up from the merge (James Richardson)
2011-11-03 22:33:16 +0000    - fixed bug with using pluginmanager before it was defined (James Richardson)