@@ -1,3 +1,3 @@
 # Plugin messages
-plugin-description: Simple server statistics
+simplestats.plugin-description: Simple server statistics
 
