@@ -1,5 +1,6 @@
 Changelog for SimpleStats (v1.4.2-SNAPSHOT)
 
+2012-08-07 04:13:50 +0100    update to use parent pom (James Richardson)
 2012-07-29 17:39:27 +0100    make memory task async (James Richardson)
 2012-07-29 17:38:08 +0100    set PK for TickRateRecord (James Richardson)
 2012-07-29 17:36:14 +0100    stop bukkit database from initalising (James Richardson)
